WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269396
[Skia] Conic gradients aren't implemented
https://bugs.webkit.org/show_bug.cgi?id=269396
Summary
[Skia] Conic gradients aren't implemented
Georges Basile Stavracas Neto
Reported
2024-02-14 13:00:05 PST
Conic gradients aren't implemented, and render a stub hardcoded linear gradient.
Attachments
Add attachment
proposed patch, testcase, etc.
Georges Basile Stavracas Neto
Comment 1
2024-02-14 13:06:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24446
EWS
Comment 2
2024-02-14 15:24:30 PST
Committed
274667@main
(b307c2ebeeb0): <
https://commits.webkit.org/274667@main
> Reviewed commits have been landed. Closing PR #24446 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-14 15:25:15 PST
<
rdar://problem/122975660
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug