[Skia] Implement conic gradients https://bugs.webkit.org/show_bug.cgi?id=269396

Reviewed by Don Olmstead.

Implement conic gradients using a Sweep gradient shader provided by
Skia. Skia renders it starting from the positive horizontal coordinate
space, so adjust that to what is expected for web by rotating it back
90 degress. The pivot point is the center of the conic.

* Source/WebCore/platform/graphics/skia/GradientSkia.cpp:
(WebCore::Gradient::shader):

Canonical link: https://commits.webkit.org/274667@main